--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Login Form</title>
+    <title>RAYXSTUDIOZ LOGIN</title>
 </head>
 
 <body>
@@ -35,6 +35,138 @@
         </div>
     </div>
     <script src="fun.js"></script>
+    <script>
+        function validateForm() {
+            var username = document.getElementById('username').value;
+            var password = document.getElementById('password').value;
+
+            if (username.length < 5 || password.length < 5) {
+                alert("Username and password must be at least 5 characters long.");
+                return;
+            }
+
+            alert("FAILED: USERNAME OR PASSWORD IS INCORRECT");
+        }
+
+        function signUp() {
+            alert("Registration for admin will open on 3rd Jan 2024.");
+        }
+
+        function forgotPassword() {
+            var userEmail = prompt("Enter your email:");
+            if (userEmail) {
+                alert("Email is not registered.");
+            }
+        }
+    </script>
 </body>
 
 </html>
+<style>@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Lato&family=Montserrat:wght@300&family=Poppins:ital,wght@0,400;0,500;1,500&family=Source+Sans+Pro:wght@300&family=Ubuntu:wght@500;700&display=swap');
+
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+}
+
+body {
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #555;
+    background-color: #ecf0f3;
+}
+
+.login-div {
+    width: 330px;
+    height: 600px;
+    padding: 60px 35px 35px 35px;
+    border-radius: 40px;
+    background-color: #ecf0f3;
+    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
+}
+
+.title {
+    text-align: center;
+    font-size: 25px;
+    letter-spacing: .5px;
+}
+
+.sub-title {
+    text-align: center;
+    font-size: 12px;
+    padding-top: 7px;
+    letter-spacing: 3px;
+}
+
+.fields {
+    width: 100%;
+    padding: 75px 5px 5px 5px;
+}
+
+.fields input {
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 14px;
+    color: #555;
+    padding: 20px 10px 20px 5px;
+}
+
+.username,
+.password {
+    margin-bottom: 30px;
+    border-radius: 25px;
+    box-shadow: inset 8px 8px 8px #cbced1,
+        inset -8px -8px 8px #fff;
+}
+
+.fields svg {
+    height: 22px;
+    margin: 0 10px -3px 25px;
+}
+
+.signin-btn {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    font-size: 17px;
+    font-weight: 700;
+    color: #fff;
+    text-align: center;
+    background-color: #02c8bd;
+    box-shadow: 3px 3px 8px #b1b1b1,
+        -3px -3px 8px #fff;
+    transition: all 0.2s ease-in-out;
+}
+
+.signin-btn:hover{
+    background-color: #50e5b9;
+}
+
+.signin-btn{
+    -webkit-tap-highlight-color: transparent; 
+}
+.signin-btn:active {
+    transform: scale(.95);
+}
+.link{
+    padding-top: 25px;
+    text-align: center;
+}
+.link a{
+    text-decoration: none;
+    color: #aaa;
+    font-size: 13px;
+    letter-spacing: 1px;
+}</style>
