--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ body {
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <style>
         body.light {
-            background-color: PURPLE;
+            background-color:black;
             color: black;
             transition: background-color 0.5s, color 0.5s;
         }
@@ -253,8 +253,7 @@ body {
             modeToggle.className = icon === 'sun' ? 'fas fa-sun' : 'fas fa-moon';
         }
 
-        // Initial mode (you can set it to 'dark' or 'light' based on user preferences)
-        // For now, let's assume light mode as the default.
+        
         changeMode('light');
     </script>
 
