--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ body {
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <style>
         body.light {
-            background-color:black;
+            background-color:WHITE;
             color: black;
             transition: background-color 0.5s, color 0.5s;
         }
