--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ body {
         }
 
         body.dark {
-            background-color: black;
+            background-color: WHITE;
             color: white;
             transition: background-color 0.5s, color 0.5s;
         }
