--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="link">
             <a href="#" onclick="forgotPassword()">Forgot Password?</a> or <a href="#" onclick="signUp()">Sign Up</a>
         </div>
+        <H3>UPDATED ON 26 NOV-2023</H3>
     </div>
     <script src="fun.js"></script>
     <script>
